# m26-ghc-generics

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project.local  flake.nix  fourmolu.yaml  ghc-generics.cabal  shell.nix  slides.html  slides.md
.github/workflows/: static.yml
app/: Main.hs
src/: GhcGenerics.hs
src/GhcGenerics/: DataTypes.hs  Pretty.hs
src/GhcGenerics/JSON/: FromJSON.hs  Parser.hs
