cabal-version:   3.0
name:            ghc-generics
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          lambdajon
maintainer:      lambdajon42@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:             warnings
  exposed-modules:
    GhcGenerics
    GhcGenerics.DataTypes
    GhcGenerics.JSON.FromJSON
    GhcGenerics.JSON.Parser
    GhcGenerics.Pretty

  build-depends:
    , base
    , containers
    , hashmap
    , megaparsec
    , text
    , vector

  hs-source-dirs:     src
  default-language:   GHC2024
  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    ImportQualifiedPost
    OverloadedRecordDot
    RecordWildCards

executable ghc-generics
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base
    , ghc-generics

  hs-source-dirs:   app
  default-language: GHC2024

test-suite ghc-generics-test
  import:           warnings
  default-language: GHC2024
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , ghc-generics
